--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -5,8 +5,6 @@
   isbn = {9781450301121},
   publisher = {Association for Computing Machinery},
   address = {New York, NY, USA},
-  url = {https://doi.org/10.1145/1399504.1360653},
-  doi = {10.1145/1399504.1360653},
   booktitle = {ACM SIGGRAPH 2008 Papers},
   articleno = {Article 54},
   numpages = {8},
@@ -22,7 +20,6 @@
   title = {Appearance-space texture synthesis},
   volume = {25},
   journal = {ACM Trans. Graph.},
-  doi = {10.1145/1141911.1141921}
 }
 
 @article{gaborNoise,
@@ -34,8 +31,6 @@
   volume    = { 28 },
   number    = { 3 },
   pages     = { 54--64 },
-  doi       = { 10.1145/1531326.1531360 },
-  lirias    = { https://lirias.kuleuven.be/handle/123456789/267512 },
   publisher = { Association for Computing Machinery },
 }
 
@@ -48,8 +43,6 @@
   volume  = { 31 },
   number  = { 4 },
   pages   = { 73:1--73:9 },
-  doi     = { 10.1145/2185520.2335424 },
-  lirias  = { https://lirias.kuleuven.be/handle/123456789/356911 },
 }
 
 @article{randomPhaseNoise,
@@ -62,8 +55,6 @@
   volume = {33},
   number = {6},
   issn = {0730-0301},
-  url = {https://doi.org/10.1145/2661229.2661249},
-  doi = {10.1145/2661229.2661249},
   journal = {ACM Trans. Graph.},
   month = nov,
   articleno = {Article 195},
@@ -74,7 +65,6 @@
 @article{phasorNoise,
   TITLE = {{Procedural Phasor Noise}},
   AUTHOR = {Tricard, Thibault and Efremov, Semyon and Zanni, C{\'e}dric and Neyret, Fabrice and Mart{\'i}nez, Jon{\`a}s and Lefebvre, Sylvain},
-  URL = {https://hal.archives-ouvertes.fr/hal-02118508},
   JOURNAL = {{ACM Transactions on Graphics}},
   PUBLISHER = {{Association for Computing Machinery}},
   VOLUME = {38},
@@ -82,11 +72,8 @@
   PAGES = {Article No. 57:1-13},
   YEAR = {2019},
   MONTH = Jul,
-  DOI = {10.1145/3306346.3322990},
   KEYWORDS = {noise ; textures ; procedural ; texture synthesis ; pattern ; Gabor},
   PDF = {https://hal.archives-ouvertes.fr/hal-02118508/file/ProceduralPhasorNoise.pdf},
-  HAL_ID = {hal-02118508},
-  HAL_VERSION = {v1},
 }
 
 @article{stripes,
@@ -103,17 +90,12 @@
 @article{survey,
   TITLE = {{A Survey of Procedural Noise Functions}},
   AUTHOR = {Lagae, Ares and Lefebvre, Sylvain and Cook, Rob and Derose, Tony and Drettakis, George and Ebert, David S. and Lewis, J.P. and Perlin, Ken and Zwicker, Matthias},
-  URL = {https://hal.inria.fr/hal-00920177},
   JOURNAL = {{Computer Graphics Forum}},
   PUBLISHER = {{Wiley}},
   VOLUME = {29},
   NUMBER = {8},
   PAGES = {2579-2600},
   YEAR = {2010},
-  DOI = {10.1111/j.1467-8659.2010.01827.x},
-  PDF = {https://hal.inria.fr/hal-00920177/file/document.pdf},
-  HAL_ID = {hal-00920177},
-  HAL_VERSION = {v1},
 }
 
 @article{textureSynthesis,
@@ -123,20 +105,15 @@
   pages = {},
   title = {Texture Synthesis over Arbitrary Manifold Surfaces},
   journal = {Computer Graphics (Proc. of Siggraph'01)},
-  doi = {10.1145/383259.383298}
 }
 
 @techreport{spectrumOfVariance,
-  TITLE = {{Understanding and controlling contrast oscillations in stochastic texture algorithms using Spectrum of Variance}},
+  TITLE = {Understanding and controlling contrast oscillations in stochastic texture algorithms using Spectrum of Variance},
   AUTHOR = {Neyret, Fabrice and Heitz, Eric},
-  URL = {https://hal.inria.fr/hal-01349134},
   TYPE = {Research Report},
   PAGES = {8},
   INSTITUTION = {{LJK / Grenoble University - INRIA}},
   YEAR = {2016},
   MONTH = May,
   KEYWORDS = {noise ; Gabor ; procedural texture ; Fourier ; signal processing},
-  PDF = {https://hal.inria.fr/hal-01349134/file/main.pdf},
-  HAL_ID = {hal-01349134},
-  HAL_VERSION = {v1},
 }
