--- a/report/main.tex
+++ b/report/main.tex
@@ -33,7 +33,7 @@ To keep up with the shorter development cycles of the current times, more work h
 
 
 \section{Related Work}
-Particularly interesting are anisotropic noise algorithms. As stated in \cite{survey}, these noise algorithms produce patterns, whose appearance is not invariant to rotation. Besides providing definitions of most noise related terms \citeauthor{survey}, also provide an overview of current Noise algorithms. The noise algorithm proposed by \citeauthor{anisotropicNoise} in \cite{anisotropicNoise} is actually not developed to produce interesting patterns with a discernible direction, but to enable the production of filtered noise to prevent aliasing when the noise texture is viewed at an angle. Today, the term \textit{anisotropic noise} is more commonly used to refer to noise algorithms, which set out to produce oriented patterns instead of ones with integrated filtering. One of these algorithms is the one proposed by \citeauthor{randomPhaseNoise} in \cite{randomPhaseNoise}. \citeauthor{randomPhaseNoise} produce noise by placing cosine functions with random phase, direction and frequency at grid points. By adjusting the way these random values are generated, the power spectrum of the noise can be controlled precisely. The ability to precisely control the power spectrum is a property shared with Gabor Noise as introduced by \citeauthor{gaborNoise} in \cite{gaborNoise}. Gabor Noise is a sparse convolution noise using a Poission point process to generate Dirac impulses that are convoluted with the Gabor kernel to produce the final noise. Since this process inherits the power spectrum of the Gabor kernel, which can be adjusted quite precisely, this affords good control over the power spectrum of the noise, especially when differing instances of the kernel are used. Despite of how powerful Gabor noise is, it is still not perfect. One problem it exhibits are the areas of low contrast, that have never been explicitly specified. This is a conclusion \citeauthor{spectrumOfVariance} also come to. In \cite{spectrumOfVariance} they develop a tool to quantify this local loss of contrast, which they call the spectrum of variance. Based on this, they develop a technique to remove low contrast areas from any noise instance. This generality, however, is a drawback as much as an advantage, since it can not use any information about the noise generation to achieve lower computation times. This is exactly what \citeauthor{phasorNoise} do in \cite{phasorNoise}. We will later have a more in depth look at their work.\\
+Particularly interesting are anisotropic noise algorithms. As stated in \cite{survey}, these noise algorithms produce patterns, whose appearance is not invariant to rotation. Besides providing definitions of most noise related terms \citeauthor{survey}, also provide an overview of current Noise algorithms. The noise algorithm proposed by \citeauthor{anisotropicNoise} in \cite{anisotropicNoise} is actually not developed to produce interesting patterns with a discernible direction, but to enable the production of filtered noise to prevent aliasing when the noise texture is viewed at an angle. Today, the term \textit{anisotropic noise} is more commonly used to refer to noise algorithms, which set out to produce oriented patterns instead of ones with integrated filtering. One of these algorithms is the one proposed by \citeauthor{randomPhaseNoise} in \cite{randomPhaseNoise}. \citeauthor{randomPhaseNoise} produce noise by placing cosine functions with random phase, direction and frequency at grid points. By adjusting the way these random values are generated, the power spectrum of the noise can be controlled precisely. The ability to precisely control the power spectrum is a property shared with Gabor Noise as introduced by \citeauthor{gaborNoise} in \cite{gaborNoise}. Gabor Noise is a sparse convolution noise using a Poission point process to generate Dirac impulses that are convoluted with the Gabor kernel to produce the final noise. Since this process inherits the power spectrum of the Gabor kernel, which can be adjusted quite precisely, this affords good control over the power spectrum of the noise, especially when differing instances of the kernel are used. This is a property leveraged in \cite{gaborNoiseByExample} to generate noise that mimics given textures. Despite of how powerful Gabor noise is, it is still not perfect. One problem it exhibits are the areas of low contrast, that have never been explicitly specified. This is a conclusion \citeauthor{spectrumOfVariance} also come to. In \cite{spectrumOfVariance} they develop a tool to quantify this local loss of contrast, which they call the spectrum of variance. Based on this, they develop a technique to remove low contrast areas from any noise instance. This generality, however, is a drawback as much as an advantage, since it can not use any information about the noise generation to achieve lower computation times. This is exactly what \citeauthor{phasorNoise} do in \cite{phasorNoise}. We will later have a more in depth look at their work.\\
 Another big advantage of Gabor noise is its ability to be generated on the surface directly. This does not involve any texture coordinates, so the resulting noise instance does not show any seams. This ability is sought for, as works like \cite{appearanceTextureSynthesis}, \cite{textureSynthesis} and \cite{stripes} show. The former present algorithms that can synthesise textures directly on surfaces, while the latter addresses a more basic problem. This problem is to find a function on a surface that varies along a given direction field with a given rate. This is another piece of work we will look at in the following section.
 
 \section{Background}
@@ -63,7 +63,14 @@ Gabor Noise exhibits areas of low contrast, as Figure \ref{fig:gaborNoise} shows
 $$
 \mathcal{S}(s) = \mathcal{F}((s-\overline{s})^2),
 $$
-where $\mathcal{F}$ denotes the Fourier transform and $\overline{s}$ represents the mean of the signal. Any nonzero values nearer than a distance $l$ to the origin correspond to low contrast areas bigger than $l$ in the original signal. They also propose a process to remove these low contrast areas, namely by normalizing with the windowed standard deviation. However, this normalization requires to compute the windowed standard deviation, which requires to evaluate the noise in the window used. This leads to a big increase in computational cost, which is a significant drawback of this technique.
+where $\mathcal{F}$ denotes the Fourier transform and $\overline{s}$ represents the mean of the signal. Any nonzero values nearer than a distance $l$ to the origin correspond to low contrast areas bigger than $l$ in the original signal. This can be seen, when comparing Figure \ref{fig:gaborNoise} and \ref{fig:phasorNoise} alongside with figure \ref{fig:spectrumOfVariance}. They also propose a process to remove these low contrast areas, namely by normalizing with the windowed standard deviation. However, this normalization requires to compute the windowed standard deviation, which requires to evaluate the noise in the window used. This leads to a big increase in computational cost, which is a significant drawback of this technique.
+
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=0.45\linewidth]{images/gaborNoiseSpectrumOfVariance}
+  \includegraphics[width=0.45\linewidth]{images/phasorNoiseSpectrumOfVariance}
+  \caption{The spectrum of Variance of Gabor noise (left) and Phasor noise (right) as displayed in \cite{phasorNoise}. Note the absence of a central lobe for Phasor Noise, which indicates no local loss of contrast.}\label{fig:spectrumOfVariance}
+\end{figure}
 
 \subsection{Phasor Noise}\label{sec:phasorNoise}
 The drawback of using the windowed Variance for normalization stems from the fact, that they can not use the noise algorithm's internal information. The logical conclusion is, that the only way to get a normalized noise texture without a big computational overhead is to design a variation of the algorithm, that produces normalized images. This is exactly what \citeauthor{phasorNoise} do in \cite{phasorNoise} for Gabor Noise. They realize, that for a signal of the form $s(x) = f(x)\cdot g(x)$, where $g$ is an oscillating function and $f$ is the envelope of $s$, discarding $f$ leads to a perfectly normalized signal. They then proceed to reformulate the bilobe case of Gabor Noise to have the form
@@ -95,7 +102,7 @@ This defines our goal: For a set of points $\vec{s}_i$, at which we want singula
 
 \subsection{Wobble}\label{sec:wobble}
 The first kind of artifact we will have a look at is wobble. As already mentioned, wobble is created by a non-constant phase. Since we are creating noise, we want this to be governed by randomness. Taking another look at Figure \ref{fig:phasorNoisePhase}, we can not identify any obvious anisotropy. Therefore any noise algorithm whose appearance is not obviously anisotropic will be sufficient to create a similar appearance to Phasor Noise. An important thing to note is, that this algorithm does not use the fact, that the output domain is cyclic. There are two reasons for this: The first is, that there is a multitude of noise algorithms with an equally large set of properties, that output to the real domain between $-1$ and $1$.\\
-The other, more important one is that it is harder to ensure the absence of singularities when using a cyclic output domain. Take for example a simple algorithm that is based on an integer lattice and at each point of this lattice determines a random number and interpolates between them. Since we are using angles, these random numbers will be between $0$ and $2\pi$. We are on a cyclical domain, so the interpolation will check if the points are nearer when using the normal difference or if they are nearer when computing the difference over the $0$/$2\pi$ boundary and choose the interpolation direction accordingly. We will now construct a possible case, where this algorithm will a create singularity. This case is also shown in Figure \ref{fig:simpleAlgirithmSingularity}. To construct this case, choose a grid cell $C$ and its four corner points $p_1$, $p_2$, $p_3$ and $p_4$ in such a way, that $(p_1,p_2,p_3,p_4,p_1)$ moves along the edges around the cell. Now, let the algorithm pick $0$, $\frac{\pi}{2}$,$\pi$ and $\frac{3\pi}{2}$ for $p_1$, $p_2$, $p_3$ and $p_4$ respectively. Since we interpolate on a cyclical domain, the points on the edge $(p_4,p_1)$ will be assigned values interpolated between $\frac{3\pi}{2}$ and $0$. We therefore created a path with a winding number of $1$ and therefore according to \textcolor{red}{some source} this path contains a singularity. Note, that this problem is not easily fixed, without removing the cyclic interpolation.\\
+The other, more important one is that it is harder to ensure the absence of singularities when using a cyclic output domain. Take for example a simple algorithm that is based on an integer lattice and at each point of this lattice determines a random number and interpolates between them. Since we are using angles, these random numbers will be between $0$ and $2\pi$. We are on a cyclical domain, so the interpolation will check if the points are nearer when using the normal difference or if they are nearer when computing the difference over the $0$/$2\pi$ boundary and choose the interpolation direction accordingly. We will now construct a possible case, where this algorithm will a create singularity. This case is also shown in Figure \ref{fig:simpleAlgirithmSingularity}. To construct this case, choose a grid cell $C$ and its four corner points $p_1$, $p_2$, $p_3$ and $p_4$ in such a way, that $(p_1,p_2,p_3,p_4,p_1)$ moves along the edges around the cell. Now, let the algorithm pick $0$, $\frac{\pi}{2}$,$\pi$ and $\frac{3\pi}{2}$ for $p_1$, $p_2$, $p_3$ and $p_4$ respectively. Since we interpolate on a cyclical domain, the points on the edge $(p_4,p_1)$ will be assigned values interpolated between $\frac{3\pi}{2}$ and $0$. We therefore created a path with a winding number of $1$ and therefore according to the argument principle of complex analysis this path contains a singularity. Note, that this problem is not easily fixed, without removing the cyclic interpolation.\\
 
 \begin{figure}[h]
   \centering
@@ -140,7 +147,7 @@ One important thing to note is the fact, that this means, that for each point we
   \includegraphics[width=0.45\linewidth]{images/fadedPhaseSineWave}
   \caption{Trying to fade out the phase offset to create a singularity using a Gaussian function. The phase offset (left) is no longer continuous, which leads to a rip in the sine wave (right). Angle is again mapped to hue.}\label{fig:fadedSingularity}
 \end{figure}
-However if we take a left and a right singularity and orient them in such a way, that their boundaries point towards each other, we no longer have this problem, as shown in Figure \ref{fig:dualSingularity}. The $0$/$2\pi$ border now has a defined end point. We will call such a pair of singularities a dual singularity. For a pair of Singularities $s_i$ and $t_i$, we can add the following to our generated phase offset:
+However, if we take a left and a right singularity and orient them in such a way, that their boundaries point towards each other, we no longer have this problem, as shown in Figure \ref{fig:dualSingularity}. The $0$/$2\pi$ border now has a defined end point. We will call such a pair of singularities a dual singularity. For a pair of Singularities $s_i$ and $t_i$, we can add the following to our generated phase offset:
 $$
 d(\vec{x}) = ((a(\vec{x})-\pi)\ \mathrm{mod}\ 2\pi)\ b(\vec{x})
 $$
@@ -154,9 +161,9 @@ $$
 and
 $$
   b(\vec{x}) = \begin{cases}
-    e^{\frac{d_s^2}{\sigma^2}}, &\text{if }d_s < d_t \land d_s < d_l\\
-    e^{\frac{d_t^2}{\sigma^2}}, &\text{if }d_t < d_s \land d_t < d_l\\
-    e^{\frac{d_l^2}{\sigma^2}}, &\text{otherwise}\\
+    \exp(\frac{d_s^2}{\sigma^2}), &\text{if }d_s < d_t \land d_s < d_l\\
+    \exp(\frac{d_t^2}{\sigma^2}), &\text{if }d_t < d_s \land d_t < d_l\\
+    \exp(\frac{d_l^2}{\sigma^2}), &\text{otherwise}\\
   \end{cases},
 $$
 where $\theta=\atan(\vec{t_i}-\vec{s_i})$, $d_s$, $d_t$ and $d_l$ are the distances to $s_i$, $t_i$ and the line connecting the two respectively and $\sigma$ determines the speed at which the dual singularity is faded out. Note, that we subtract $\pi$ from this phase offset, to make one side dip down a little, while the other one increase, instead of just one increasing by twice as much. We do this, because to make room for an additional line, the other lines shift slightly as can already be seen in Figure \ref{fig:fadedSingularity} and is still visible in Figure \ref{fig:dualSingularity}. However, we assume the existence of wobble, which masks this small offset.
@@ -169,15 +176,15 @@ where $\theta=\atan(\vec{t_i}-\vec{s_i})$, $d_s$, $d_t$ and $d_l$ are the distan
   \caption{The phase offset for a dual singularity (left), the offset for a dual singularity faded by a Gaussian (center) and the phase offset in a sine wave (right).}\label{fig:dualSingularity}
 \end{figure}
 
-Using dual singularities we can expand our constructed phase offset to
+Using dual singularities, we can expand our constructed phase offset to
 \begin{align*}
   \varphi_c(\vec{x})&=w(\vec{x}) +\sum_i d_i(\vec{x})\\
   & + \sum_j \atan(\vec{x}-\vec{s}_j) - \sum_k \atan(\vec{x}-\vec{t_k})
 \end{align*}
-We use $d_i$ to reference the function to create a dual singularity adapted to $s_i$ and $t_i$. We add the terms for single singularities as there might be a different number of right and left singularities or the use case does not permit the optimization of pairing up all singularities. In an optimal case one of these sums equals $0$, as there are no summands.
+We use $d_i$ to reference the function to create a dual singularity adapted to $s_i$ and $t_i$. We add the terms for single singularities as there might be a different number of right and left singularities or the use case does not permit the optimization of pairing up all singularities. In an optimal case, one of these sums equals $0$, as there are no summands.
 
 \subsection{Rips}\label{sec:rips}
-Rips are caused by a large change in the phase offset. When trying to fade out a single singularity, we already saw, that scaling a $0$/$2\pi$ step creates a large change in phase and by extension a rip. However, when using this technique to create rips, one of the end points can not be controlled easily. In $d(\vec{x})$ we already created a function that creates a $0$/$2\pi$ step along a line connecting to points. Therefore for a line $l_i$ representing the position for a rip, we can use the corresponding $d_i$ rescaled by a weight $o_i$. Figure \ref{fig:ripPhase} shows the phase of a rip, while Figure \ref{fig:ripWeight} shows the effect the weight has on the rip.
+Rips are caused by a large change in the phase offset. When trying to fade out a single singularity, we already saw, that scaling a $0$/$2\pi$ step creates a large change in phase and by extension a rip. However, when using this technique to create rips, one of the end points can not be controlled easily. In $d(\vec{x})$ we already created a function that creates a $0$/$2\pi$ step along a line connecting two points. Therefore, for a line $l_i$ representing the position for a rip, we can use the corresponding $d_i$ rescaled by a weight $o_i$. Figure \ref{fig:ripPhase} shows the phase of a rip, while Figure \ref{fig:ripWeight} shows the effect the weight has on the rip.
 
 \begin{figure}[ht]
   \centering
@@ -191,17 +198,17 @@ Rips are caused by a large change in the phase offset. When trying to fade out a
   \includegraphics[width=0.3\linewidth]{images/rip01}
   \includegraphics[width=0.3\linewidth]{images/rip05}
   \includegraphics[width=0.3\linewidth]{images/rip09}
-  \caption{A rip with a weight of $0.1$ (left), one with a weight of $0.5$ (center) and one with a weight of $0.9$ (right). The low weight of the first rip leads to an almost negligible rip, while the medium weight of the second leads to the maximum difference between the sides of the rip. The large weight of the last also leads to only a small offset, however the rip is framed by singularities on both sides.}\label{fig:ripWeight}
+  \caption{A rip with a weight of $0.1$ (left), one with a weight of $0.5$ (center) and one with a weight of $0.9$ (right). The low weight of the first rip leads to an almost negligible rip, while the medium weight of the second leads to the maximum difference between the sides of the rip. The large weight of the last also leads to only a small offset. However, the rip is framed by singularities on both sides.}\label{fig:ripWeight}
 \end{figure}
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.45\linewidth]{images/ripChainingPhase}
   \includegraphics[width=0.45\linewidth]{images/ripChaining}
-  \caption{Multiple rips chained together to form a square. \textcolor{red}{is it ok to not state what the images are at this point??}}\label{fig:ripChaining}
+  \includegraphics[width=0.45\linewidth]{images/ripChainingPhase}
+  \caption{Multiple rips chained together to form a square (left) and the phase offset used to accomplish this (right).}\label{fig:ripChaining}
 \end{figure}
 
-As Figure \ref{fig:ripChaining} rips can be chained without additional artifacts to generate more complex shapes.\\
+As Figure shows, \ref{fig:ripChaining} rips can be chained without additional artifacts to generate more complex shapes.\\
 Using this, we can once again expand our constructed phase offset:
 \begin{align*}
   \varphi_c(\vec{x})&=w(\vec{x}) +\sum_i d_i(\vec{x})\\
@@ -221,14 +228,14 @@ For demonstration purposes, we always used only one artifact type at a time, how
 
 
 \section{The non-constant Case}\label{sec:nonConstant}
-In this case non-constant case refers to the stripe direction and frequency. The main difficulty with this is to find a base function, that increases orthogonally to the stripe direction, that can be used as a basis for the phase. In general this function is the integral of the direction field. In the constant case this direction field was constant, so the integral was a linear function. However, not all vector fields are integrable and therefore we need to differentiate between the two cases.
+The second case we will look at is the more general non-constant one. In this context non-constant refers to the stripe direction and frequency. The main difficulty with this is to find a base function, that increases orthogonally to the stripe direction, that can be used as a basis for the phase. In general, this function is the integral of the direction field. In the constant case, this direction field was constant, so the integral was a linear function. However, not all vector fields are integrable and therefore we need to differentiate between the two cases.
 
 \subsection{Integrable Direction Field}
-This is the simpler case of the two. Knowing a function whose derivative is the direction field we want to use makes it possible to use all the things we went over in the previous sections. For the integral $I(\vec{x})$ of the direction field, we can replace the linear function $f\langle\vec{x},\vec{u}\rangle$ with $I(x)$ to receive:
+We will first look at the case, where the direction field is integrable. Knowing a function whose derivative is the direction field we want to use makes it possible to use all the concepts we went over in the previous sections. For the integral $I(\vec{x})$ of the direction field, we can replace the linear function $f\langle\vec{x},\vec{u}\rangle$ with $I(x)$ to receive:
 $$
 P_c(\vec{x}) = \sin(I(\vec{x})+\varphi_c(\vec{x}))
 $$
-Figure \ref{fig:parabola} shows a Phasor nose instance using the direction field
+Figure \ref{fig:parabola} shows a Phasor noise instance using the direction field
 $$
 d(\vec{x}) = \begin{pmatrix}
 2x_1+x_2^2\\
@@ -247,8 +254,8 @@ $$
 \end{figure}
 
 \subsection{Non-integrable Direction Field}\label{sec:stripes}
-In this case we can not simply integrate the direction field to obtain the base for the sine wave. However, \cite{stripes} develops a substitute for this base function, we will call $f(\vec{x})$. The technique already presents a way to prescribe singularities, so we will not have a look at singularities in this section. Even if we do not add any singularities, some direction fields require some, so it may not be possible to avoid them. Another major limitation of this technique is the requirement to use an oscillation profile, that is symmetric to the $y$-axis. We can try to use a cosine based oscillation instead of a sine based one, however, since adding a phase to a cosine is equal to shifting it along the $x$-axis, we can not add a phase offset without creating artifacts in the image.\\
-One method to create a base function, we can use, is to create a low frequency oscillation and create a symmetric, but locally different function. Another way to express this approach is to use one period of the created function to create multiple stripes in the output. However, as Figure \ref{fig:multiStripe} shows, this massively amplifies the effect of the already existing singularities. Apart from this, this approach can be used as the others, so we will not discuss it further.
+A case with a non-integrable direction field is much harder, as we can not simply integrate the direction field to obtain the base for the sine wave. However, \cite{stripes} develops a substitute for this base function, we will call $f(\vec{x})$. The technique already presents a way to prescribe singularities, so we will not have a look at singularities in this section. Even if we do not add any singularities, some direction fields require some, so it may not be possible to avoid them. Another major limitation of this technique is the requirement to use an oscillation profile, that is symmetric to the $y$-axis. We can try to use a cosine based oscillation instead of a sine based one. However, since adding a phase to a cosine is equal to shifting it along the $x$-axis, we can not add a phase offset without creating artifacts in the image.\\
+One method to create a base function, which we can use, is to create a low frequency oscillation and create a symmetric, but locally different function. Another way to express this approach is to use one period of the created function to create multiple stripes in the output. However, as Figure \ref{fig:multiStripe} shows, this massively amplifies the effect of the already existing singularities. Apart from this, this approach can be used as the others, so we will not discuss it further.
 
 \begin{figure}[ht]
   \centering
@@ -257,7 +264,7 @@ One method to create a base function, we can use, is to create a low frequency o
   \caption{A low frequency stripe pattern with varying direction and wobble (left) and the pattern extended to create multiple stripes per period (right).}\label{fig:multiStripe}
 \end{figure}
 
-Another approach is try to adapt the techniques we developed so far to work with these limitations. However, as we will see, this too will not be as successful as the constant case. As before, the first artifact we will have a look at is wobble. We apply a simple trick to ensure the symmetry of our function. The first thing we do is to take the absolute value of $f$. We will now add wobble as we did before. The result is shown in Figure \ref{fig:multiDirWobble}. Instead of the lines moving to one side, they actually vary in width. This is because we do not now on which side of the peak we are, so we can either add or subtract from both. Of course the actual value varies, but since the wobble phase offset is continuous, in a local area, it either one or the other.
+Another approach is to try to adapt the techniques we developed so far to work with these limitations. However, as we will see, this too will not be as successful as in the constant case. As before, the first artifact we will have a look at is wobble. We apply a simple trick to ensure the symmetry of our function. The first thing we do is to take the absolute value of $f$. We will now add wobble as we did before. The result is shown in Figure \ref{fig:multiDirWobble}. Instead of the lines moving to one side, they actually vary in width. This is because we do not know on which side of the peak we are, so we can either add or subtract from both. Of course, the actual value varies, but since the wobble phase offset is continuous, in a local area, it is either one or the other.
 
 \begin{figure}[ht]
   \centering
@@ -265,16 +272,16 @@ Another approach is try to adapt the techniques we developed so far to work with
   \caption{Adding wobble does not move the lines, but causes them to vary in width.}\label{fig:multiDirWobble}
 \end{figure}
 
-The other artifact type we will have a look at is rips. Having a look at Figure \ref{fig:multiDirRip}, it is apparent, that again the forced symmetry is problematic, as the lines to not shift to create an offset, but vary in width. It still creates something akin to a rip.
+The other artifact type we will have a look at is rips. Having a look at Figure \ref{fig:multiDirRip}, it is apparent, that again the forced symmetry is problematic, as the lines do not shift to create an offset, but vary in width. It still creates something akin to a rip.
 
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.45\linewidth]{images/multiDirRip}
-  \caption{Creating a rip in an environment with a non-integrable direction field. The line do not shift to create an opposition, but vary in width.}\label{fig:multiDirRip}
+  \caption{Creating a rip in an environment with a non-integrable direction field. The lines do not shift to create an opposition, but vary in width.}\label{fig:multiDirRip}
 \end{figure}
 
 \section{Results}\label{sec:results}
-Our technique naturally lends itself to applications Phasor noise useful in, especially if only some artifact type are wanted. Figure \ref{fig:mountains} shows a mountain range generated using wobble and randomly placed singularities. It also show how a prescribed rip can be used mimic offset in the terrain created by an earthquake. Figure \ref{fig:desert} also makes use of a prescribed rip to emulate sand dunes, that form around a sheet of glass. Another interesting application of rips is shown in Figure \ref{fig:bricks} where a constructed Phasor noise instance is used to create detail in a texture, that respect the existing boundaries of the texture.
+Our technique naturally lends itself to applications Phasor noise is useful in, especially if only some artifact types are wanted. Figure \ref{fig:mountains} shows a mountain range generated using wobble and randomly placed singularities. It also shows how a prescribed rip can be used to mimic offset in the terrain created by an earthquake. Figure \ref{fig:desert} also makes use of a prescribed rip to emulate sand dunes, that form around a sheet of glass. Another interesting application of rips is shown in Figure \ref{fig:bricks}, where a constructed Phasor noise instance is used to create detail in a texture, that respects the existing boundaries of the texture.
 
 \begin{figure}[ht]
   \centering
@@ -294,15 +301,15 @@ Our technique naturally lends itself to applications Phasor noise useful in, esp
   \includegraphics[width=0.45\linewidth]{images/brick}
   \includegraphics[width=0.45\linewidth]{images/brickSimple}
   \includegraphics[width=0.45\linewidth]{images/brickRespecting}
-  \caption{Adding detail to a naively upscaled brick texture. The original texture (left) and a version with added naively detail (center). We can use rips to force discontinuities where the original texture suggests a change of material (right).}\label{fig:bricks}
+  \caption{Adding detail to a na\"ively upscaled brick texture. The original texture (left) and a version with na\"ively added detail (center). We can use rips to force discontinuities where the original texture suggests a change of material (right).}\label{fig:bricks}
 \end{figure}
 
 \section{Future Work}
-Despite the demonstrated use cases for constructed artifacts in Phasor noise and the lack thereof, there are still areas to explore. One of these areas is the non-constant case. While the integrable case works fine, the non-integrable case still needs more work. The main limitation is the fact, that asymmetric oscillation profiles are no possible. On one hand we could try to keep track of where in the period we are, to enable asymmetric oscillation profiles, while on the other hand we could try to adapt the methods described here to work with symmetric oscillation profiles. Finding a good way to work with the work presented in \cite{stripes} also enables the application of this approach to work as surface noise. While this leads to a need of texture coordinates to specify where on the objects artifact should appear, these do not have to be free of discontinuities, as they would only be used to for this purpose. Therefore, even simple algorithms to generate texture coordinates will do.\\
-Another avenue, that can be explored is an adaptation to work in higher dimensions, especially in an three dimensional environment. For the integrable case this is can be done by defining three dimensional equivalents to the artifact generation functions we defined here. The non-integrable case also requires the definition of a function, that can be used as a base for the oscillation.
+Despite the demonstrated use cases for constructed artifacts in Phasor noise and the lack thereof, there are still more areas to explore. One of these areas is the non-constant case. While the integrable case works fine, the non-integrable case still needs more work. The main limitation is the fact, that asymmetric oscillation profiles are not possible. On one hand, we could try to keep track of where in the period we are, to enable asymmetric oscillation profiles, while on the other hand we could try to adapt the methods described here to work with symmetric oscillation profiles. Finding a good way to work with the work presented in \cite{stripes} also enables the application of this approach to work as surface noise. While this leads to a need for texture coordinates to specify where on the object artifacts should appear, these do not have to be free of discontinuities, as they would only be used for this purpose. Therefore, even simple algorithms that generate texture coordinates will do.\\
+Another avenue, that can be explored, is an adaptation to work in higher dimensions, especially in a three dimensional environment. For the integrable case, this is can be done by defining three dimensional equivalents to the artifact generation functions we defined here. The non-integrable case also requires the definition of a function, that can be used as a base for the oscillation.
 
 \section{Conclusion}
-In the integrable case we can now freely control the artifacts Phasor noise exhibits. This allows the automated creation of new types of content as we have seen. These additional automation opportunities will aid in the never ending fight against shorter development cycles.
+In the integrable case, we can now freely control the artifacts Phasor noise exhibits. This allows the automated creation of new types of content, as we have seen. These additional automation opportunities will aid in the never ending fight against shorter development cycles.
 
 
 \FloatBarrier
