--- a/report/main.tex
+++ b/report/main.tex
@@ -321,7 +321,7 @@ Our technique naturally lends itself to applications Phasor noise is useful in, 
   \vspace{2pt}
 
   \includegraphics[width=0.49\linewidth]{images/brickRespecting}
-  \caption{Adding detail to a na\"ively upscaled brick texture. The original texture (left) and a version with na\"ively added detail (center). We can use rips to force discontinuities where the original texture suggests a change of material (right).}\label{fig:bricks}
+  \caption{Adding detail to a na\"ively upscaled marble brick texture. The original texture (left) and a version with na\"ively added detail (center). We can use rips to force discontinuities where the original texture suggests a change of material (right).}\label{fig:bricks}
 \end{figure}
 
 \section{Future Work}
