--- a/report/main.tex
+++ b/report/main.tex
@@ -261,7 +261,7 @@ x_1^2+2x_2
 $$
 which integrates to
 $$
-I(\vec{x}) = \langle \vec{x},\vec{x} \rangle.
+I(\vec{x}) = x_1^2 + x_2^2 = \langle \vec{x},\vec{x} \rangle.
 $$
 
 \begin{figure}[ht]
