--- a/report/main.tex
+++ b/report/main.tex
@@ -34,7 +34,7 @@
 \maketitle 
  
 \section*{Abstract}  
-Procedural Phasor noise is a powerful tool to synthesize normalized noise patterns. However, it also generates artifacts in the form of singularities and rips. We present a method generate a bilobe Phasor Noise instance only containing defined artifacts by synthesizing the phase directly instead of constructing it using the corresponding Gabor noise Instance. We also start development on a method for more complex cases and show how our method can be expanded to surface noise.
+Procedural Phasor noise is a powerful tool to synthesize normalized noise patterns. However, it also generates artifacts in the form of singularities and rips. We present a method to generate a bilobe Phasor Noise instance only containing defined artifacts by synthesizing the phase directly instead of constructing it using the corresponding Gabor Noise instance. We also start development on a method for more complex cases and show how our method can be expanded to surface noise.
   
 \section{Introduction}   
 To keep up with the shorter development cycles of the current times, more work has to be done in less time. The tools with which this is achieved are optimization of workflows as well as automation. While even the automation of repetitive tasks can be challenging, automating creative tasks like content creation is even more so. This is where noise algorithms provide assistance. They provide a way to generate non-repeating patterns over potentially infinite space at low memory and computational cost. Using these patterns to influence different aspects of the content, anything from additional detail on surfaces up to the layout of whole worlds can be generated automatically. The generated patterns are as varied as the algorithms itself. The different algorithms also provide different levels of influence over the produced pattern. Additional parameters to tune the generated pattern are of course desirable, as a richer set of patterns will be applicable to more situations, therefore offering further automation opportunities.
@@ -94,7 +94,7 @@ where $f$ and $\vec{u}$ are again the frequency and direction of the main oscill
 \end{figure}
 
 \subsection{Stripes Patterns on Surfaces}
-In Section \ref{sec:stripes}, we will see, that we need a function $F$, defined on a mesh, that increases with a direction $X$ and speed $\nu$ determined by a vector field. We need this function to generate a stripe pattern by plugging it into a periodic function. One way to compute this function is as the integral over the direction field. As stated in \cite{stripes}, this is not always possible, even for a simple plane, as vector fields with non-zero curl are non-integrable. \cite{stripes} also provides a solution. They achieve this by trying to find a complex function $\psi$, whose argument $\alpha$ is equal to $F$. Constraining $d\alpha(Y) = \nu\langle X,Y\rangle$ leads them to differential equation for $\psi$. In most cases this equation does not have a solution, so they relax this constraint to a minimization and obtain a complex version of the Dirichlet energy. They then proceed to minimize this energy akin to the normal Dirichlet energy. While necessary to receive a solution, this minimization unfortunately allows new singularities to emerge, which is obviously necessary, when considering an object whose width varies along the stripe direction. As the width the stripes have to cover increases, either the number of stripes needs to increase, or the stripe frequency needs to drop. For our application, one could replace their work with another way to generate a function that increases according to a vector field, but here we will use their work.
+In Section \ref{sec:stripes}, we will see, that we need a function $F$, defined on a mesh, that increases with a direction $X$ and speed $\nu$ determined by a vector field. We need this function to generate a stripe pattern by plugging it into a periodic function. One way to compute this function is as the integral over the direction field. As stated in \cite{stripes}, this is not always possible, even for a simple plane, as vector fields with non-zero curl are non-integrable. \cite{stripes} also provides a solution. They achieve this by trying to find a complex function $\psi$, whose argument $\alpha$ is equal to $F$. Constraining $d\alpha(Y) = \nu\langle X,Y\rangle$ leads them to differential a equation for $\psi$. In most cases, this equation does not have a solution, so they relax this constraint to a minimization and obtain a complex version of the Dirichlet energy. They then proceed to minimize this energy akin to the normal Dirichlet energy. While necessary to receive a solution, this minimization unfortunately allows new singularities to emerge, which is obviously necessary, when considering an object whose width varies along the stripe direction. As the width the stripes have to cover increases, either the number of stripes needs to increase, or the stripe frequency needs to drop. For our application, one could replace their work with another way to generate a function that increases according to a vector field, but here we will use their work.
 
 \section{The constant Case}
 We will first look at a simple case. This case corresponds to the bilobe case of Phasor Noise. This means a constant oscillation direction and frequency. However, before we start out, we will define a third type of artifact besides singularities and rips: wobble. Comparing the areas of a Phasor sine wave with a regular sine wave, we find that the lines are not perfectly straight. We will refer to this fact as wobble from now on. From Section \ref{sec:phasorNoise} we recall that in this case Phasor Noise consists of two parts: A function increasing in a given direction and a phase offset. Figure \ref{fig:phasorNoisePhase} shows a Phasor Noise instance as well as its phase offset. Comparing the phase from Figure \ref{fig:phasorNoisePhase} with Figure \ref{fig:phasorNoise}, we can easily find a correspondence between artifacts of the Phasor sine wave and features of the phase. The existence of wobble is caused by the fact, that the phase is not constant even in areas, where there are no other artifacts present. \citeauthor{phasorNoise} already identify that rips are caused by sudden value changes in the phase offset, while singularities are located at points around which the phase offset rotates abruptly.\\
@@ -117,7 +117,7 @@ The other, more important one is that it is harder to ensure the absence of sing
   \caption{A simple noise algorithm creating a singularity on a cyclical domain. The circles represent the points of the lattice while in between them the interpolation is shown. The rest shows possible values for the domain. Angle is again mapped to hue.}\label{fig:simpleAlgirithmSingularity}
 \end{figure}
 
-Therefore, we will stick with algorithms outputting to the classic domain of $[-1,1]$. Since we need to scale these value and are using this function to generate angle values, we generate the wobble phase offset $w(\vec{x})$ as
+Therefore, we will stick with algorithms outputting to the classic domain of $[-1,1]$. Since we need to scale these values and are using this function to generate angle values, we generate the wobble phase offset $w(\vec{x})$ as
 $$
 w(\vec{x}) = (a\cdot n(\vec{x}))\ \mathrm{mod}\ 2\pi,
 $$
@@ -333,7 +333,7 @@ Despite the demonstrated use cases for constructed artifacts in Phasor noise and
 Another avenue, that can be explored, is an adaptation to work in higher dimensions, especially in a three dimensional environment. For the integrable case, this is can be done by defining three dimensional equivalents to the artifact generation functions we defined here. The non-integrable case also requires the definition of a function, that can be used as a base for the oscillation.
 
 \section{Conclusion}
-In the integrable case, we can now freely control the artifacts Phasor noise exhibits. We can do this by constructing the phase using a linear function as a base. We then proceed to add constructed functions, that correspond to the artifact types and positions we want. Using a periodic function, we can than convert this to a Phasor noise instance. We also has a look at how the non-integrable case can be handled, where the difficulty lies in finding a base that is consistent with the given direction field. The presented method allows the automated creation of new types of content, as we have seen. These additional automation opportunities will aid in the never ending fight against shorter development cycles.
+In the integrable case, we can now freely control the artifacts Phasor noise exhibits. We can do this by constructing the phase using a linear function as a base. We then proceed to add constructed functions, that correspond to the artifact types and positions we want. Using a periodic function, we can than convert this to a Phasor noise instance. We also had a look at how the non-integrable case can be handled, where the difficulty lies in finding a base that is consistent with the given direction field. The presented method allows the automated creation of new types of content, as we have seen. These additional automation opportunities will aid in the never ending fight against shorter development cycles.
 
 
 \FloatBarrier
