--- a/report/main.tex
+++ b/report/main.tex
@@ -94,7 +94,7 @@ where $f$ and $\vec{u}$ are again the frequency and direction of the main oscill
 \end{figure}
 
 \subsection{Stripes Patterns on Surfaces}
-In Section \ref{sec:stripes}, we will see, that we need a function $F$, defined on a mesh, that increases with a direction $X$ and speed $\nu$ determined by a vector field. We need this function to generate a stripe pattern by plugging it into a periodic function. One way to compute this function is as the integral over the direction field. As stated in \cite{stripes}, this is not always possible, even for a simple plane, as vector fields with non-zero curl are non-integrable. \cite{stripes} also provides a solution. They achieve this by trying to find a complex function $\psi$, whose argument $\alpha$ is equal to $F$. Constraining $d\alpha(Y) = \nu\langle X,Y\rangle$ leads them to a differential a equation for $\psi$. In most cases, this equation does not have a non-trivial solution, so they relax this constraint to a minimization and obtain a complex version of the Dirichlet energy. They then proceed to minimize this energy akin to the normal Dirichlet energy. While necessary to receive a solution, this minimization unfortunately allows new singularities to emerge, which are obviously necessary, when considering an object whose width varies along the stripe direction. As the width, the stripes have to cover, increases, either the number of stripes needs to increase, or the stripe frequency needs to drop. For our application, one could replace their work with another way to generate a function that increases according to a vector field, but here we will use their work.
+In Section \ref{sec:stripes}, we will see, that we need a function $F$, defined on a mesh, that increases with a direction $X$ and speed $\nu$ determined by a vector field. We need this function to generate a stripe pattern by plugging it into a periodic function. One way to compute this function is as the integral over the direction field. As stated in \cite{stripes}, this is not always possible, even for a simple plane, as vector fields with non-zero curl are non-integrable. \cite{stripes} also provides a solution. They achieve this by trying to find a complex function $\psi$, whose argument $\alpha$ is equal to $F$. Constraining $d\alpha(Y) = \nu\langle X,Y\rangle$ leads them to a differential equation for $\psi$. In most cases, this equation does not have a non-trivial solution, so they relax this constraint to a minimization and obtain a complex version of the Dirichlet energy. They then proceed to minimize this energy akin to the normal Dirichlet energy. While necessary to receive a solution, this minimization unfortunately allows new singularities to emerge, which are obviously necessary, when considering an object whose width varies along the stripe direction. As the width, the stripes have to cover, increases, either the number of stripes needs to increase, or the stripe frequency needs to drop. For our application, one could replace their work with another way to generate a function that increases according to a vector field, but here we will use their work.
 
 \section{The constant Case}
 We will first look at a simple case. This case corresponds to the bilobe case of Phasor Noise. This means a constant oscillation direction and frequency. However, before we start out, we will define a third type of artifact besides singularities and rips: wobble. Comparing the areas of a Phasor sine wave with a regular sine wave, we find that the lines are not perfectly straight. We will refer to this fact as wobble from now on. In the following we will have a closer look at each of the artifact types. Section \ref{sec:wobble} will start this out by looking at wobble. Following that is Section \ref{sec:singularities}, which will examine singularities. The last artifact type is rips, which we will look at in Section \ref{sec:rips}.\\
@@ -147,7 +147,7 @@ $$
   \hfill
   \includegraphics[width=0.235\linewidth]{images/leftSingularityPhase}
   \includegraphics[width=0.235\linewidth]{images/leftSingularity}
-  \caption{A simple way to add a single singularity to a sine wave. In order: Phase offset of right singularity, right singularity in Phasor Sine Wave, phase offset of left singularity, left singularity in Phasor Sine Wave. Both Phasor Sine Waves are without wobble. For the phase offsets angle is mapped to hue.}\label{fig:singularities}
+  \caption{A simple way to add a single singularity to a sine wave. In order: Phase offset of right singularity, right singularity in Phasor Sine Wave, phase offset of left singularity, left singularity in Phasor Sine Wave. Both Phasor Sine Waves are without wobble. For the phase offset angle is mapped to hue.}\label{fig:singularities}
 \end{figure}
 
 Figure \ref{fig:singularities} shows this function as well as its impact when used as a phase offset for a sine wave.
@@ -199,7 +199,7 @@ Using dual singularities, we can expand our constructed phase offset to
   \varphi_c(\vec{x})&=w(\vec{x}) +\sum_i d_i(\vec{x})\\
   & + \sum_j \atan(\vec{x}-\vec{s}_j) - \sum_k \atan(\vec{x}-\vec{t_k})
 \end{align*}
-We use $d_i$ to reference the function to create a dual singularity adapted to $s_i$ and $t_i$. We add the terms for single singularities as there might be a different number of right and left singularities or the use case may not permit the optimization of pairing up all singularities. In an optimal case, when there are only dual singularities, one of these sums equals $0$, as there are no summands. This is optimal, as we only need to evaluate the term corresponding to a given dual singularity, when we near the line connecting the two singularities.
+We use $d_i$ to reference the function to create a dual singularity adapted to $s_i$ and $t_i$. We add the terms for single singularities as there might be a different number of right and left singularities or the use case may not permit the optimization of pairing up all singularities. In an optimal case, when there are only dual singularities, one of these sums equals $0$, as there are no summands. This is optimal, as we only need to evaluate the term corresponding to a given dual singularity, when we are near the line connecting the two singularities.
 
 \subsection{Rips}\label{sec:rips}
 Rips are caused by a large change in the phase offset. When trying to fade out a single singularity, we already saw that scaling a $0$/$2\pi$ step creates a large change in phase and by extension a rip. However, when using this technique to create rips, one of the end points can not be controlled easily. In $d(\vec{x})$ we already created a function that creates a $0$/$2\pi$ step along a line connecting two points. Therefore, for a line $l_i$ representing the position for a rip, we can use the corresponding $d_i$ rescaled by a weight $o_i$. Figure \ref{fig:ripPhase} shows the phase of a rip, while Figure \ref{fig:ripWeight} shows the effect the weight has on the rip.
